labs/09-Ingress/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  ports:
    - name: http
      # The port that will be exposed by this service.
      port: 80
      # Number or name of the port to access on the pods targeted by the service
      targetPort: 80
  selector:
    app: nginx
